# Emu_Intel8080

./: CMakeLists.txt  README.md  WindowsToolchain.cmake  main.cpp
hardware/: AudioFile.h  Bus.cpp  Bus.h  Intel8080.cpp  Intel8080.h  Screen.cpp  Screen.h  Screen.ui  ScreenAdapter.cpp  ScreenAdapter.h  Speaker.cpp  Speaker.h  bus.cpp  bus.h  intel_8080.cpp  intel_8080.h  screen.cpp  screen.h  screen.ui  screen_adapter.cpp  screen_adapter.h  speaker.cpp  speaker.h
scripts/: deploy.sh  deploy_linux.sh  deploy_windows.sh
tests/: CMakeLists.txt  Intel8080.cpp  Intel8080.h  Intel8080Tests.cpp  intel_8080.cpp  intel_8080.h  intel_8080_tests.cpp
utils/: Settings.h  WaveFileLoader.cpp  WaveFileLoader.h
widgets/: BorderLayout.cpp  BorderLayout.h  GameConfigDialog.cpp  GameConfigDialog.h  KeybindsDialog.cpp  KeybindsDialog.h
wrapper/: CMakeLists.txt  WrapperLinux.cpp  WrapperWindows.cpp
